; ModuleID = '/home/carl/AnghaBench/git/extr_string-list.c_cmp_items.c'
source_filename = "/home/carl/AnghaBench/git/extr_string-list.c_cmp_items.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list_sort_ctx = type { i32 (i32, i32)* }
%struct.string_list_item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @cmp_items to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_items(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.string_list_sort_ctx*, align 8
  %8 = alloca %struct.string_list_item*, align 8
  %9 = alloca %struct.string_list_item*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.string_list_sort_ctx*
  store %struct.string_list_sort_ctx* %11, %struct.string_list_sort_ctx** %7, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to %struct.string_list_item*
  store %struct.string_list_item* %13, %struct.string_list_item** %8, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = bitcast i8* %14 to %struct.string_list_item*
  store %struct.string_list_item* %15, %struct.string_list_item** %9, align 8
  %16 = load %struct.string_list_sort_ctx*, %struct.string_list_sort_ctx** %7, align 8
  %17 = getelementptr inbounds %struct.string_list_sort_ctx, %struct.string_list_sort_ctx* %16, i32 0, i32 0
  %18 = load i32 (i32, i32)*, i32 (i32, i32)** %17, align 8
  %19 = load %struct.string_list_item*, %struct.string_list_item** %8, align 8
  %20 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.string_list_item*, %struct.string_list_item** %9, align 8
  %23 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 %18(i32 %21, i32 %24)
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
